Fixed contrast issues in Jumbotron and link in bio. Added title for LinkedIn link for screen readers. Added alt text for images.

--- a/assets/style.css
+++ b/assets/style.css
@@ -44,7 +44,6 @@ body {
   background-image: url(./images/boards.jpg);
   background-position: center;
   background-size: 100% auto;
-  color: #fff;
 }
 
 .card-box-style {
